--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "Christopher Olivares <chris@classdojo.com>",
   "license": "ISC",
   "dependencies": {
+    "async": "0.9.0",
     "aws-sdk": "2.0.25",
     "debug": "2.1.0",
+    "highland": "^2.0.0",
     "lodash": "2.4.1",
+    "node-uuid": "1.4.1",
     "slide": "1.1.6"
   },
   "devDependencies": {
