--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
   "author": "Christopher Olivares <chris@classdojo.com>",
   "license": "ISC",
   "dependencies": {
-    "always-tail": "0.1.1",
+    "JSONStream": "^0.9.0",
     "async": "0.9.0",
     "aws-sdk": "2.0.25",
     "debug": "2.1.0",
-    "highland": "^2.0.0",
+    "highland": "2.0.0",
     "lodash": "2.4.1",
     "node-uuid": "1.4.1",
-    "slide": "1.1.6"
+    "slide": "1.1.6",
+    "tail-stream": "0.2.1"
   },
   "devDependencies": {
     "mocha": "2.0.1",
