--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Christopher Olivares <chris@classdojo.com>",
   "license": "ISC",
   "dependencies": {
-    "JSONStream": "^0.9.0",
+    "JSONStream": "0.9.0",
     "async": "0.9.0",
     "aws-sdk": "2.0.25",
     "debug": "2.1.0",
