--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Transfer mongo collections to s3",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "make test-codecov.io"
   },
   "author": "Christopher Olivares <chris@classdojo.com>",
   "license": "ISC",
@@ -20,6 +20,9 @@
     "tail-stream": "0.2.1"
   },
   "devDependencies": {
+    "codecov.io": "0.0.8",
+    "istanbul": "0.3.2",
+    "jshint": "2.5.10",
     "mocha": "2.0.1",
     "expect.js": "0.2.0"
   }
