--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "istanbul": "0.3.2",
     "jshint": "2.5.10",
     "mocha": "2.0.1",
-    "expect.js": "0.2.0"
+    "expect.js": "0.2.0",
+    "sinon": "1.12.1"
   }
 }
