--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "lodash": "2.4.1",
     "node-uuid": "1.4.1",
     "slide": "1.1.6",
-    "tail-stream": "0.2.1"
+    "tail-stream": "0.2.1",
+    "rewire": "2.1.3",
+    "sinon": "1.12.1",
+    "jshint": "2.5.10",
+    "mocha": "2.0.1",
+    "expect.js": "0.3.1"
   },
   "devDependencies": {
     "codecov.io": "0.0.8",
