--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongo-to-s3",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "Transfer mongo collections to s3",
   "main": "index.js",
   "scripts": {
@@ -30,7 +30,7 @@
     "istanbul": "0.3.2",
     "jshint": "2.5.10",
     "mocha": "2.0.1",
-    "mock-fs": "^2.3.2",
+    "mock-fs": "2.3.2",
     "sinon": "1.12.1"
   }
 }
