--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "async": "0.9.0",
     "aws-sdk": "2.0.25",
     "debug": "2.1.0",
+    "expect.js": "0.3.1",
     "highland": "2.0.0",
+    "jshint": "2.5.10",
     "lodash": "2.4.1",
+    "mocha": "2.0.1",
     "node-uuid": "1.4.1",
-    "slide": "1.1.6",
-    "tail-stream": "0.2.1",
+    "once": "1.3.1",
     "rewire": "2.1.3",
     "sinon": "1.12.1",
-    "jshint": "2.5.10",
-    "mocha": "2.0.1",
-    "expect.js": "0.3.1"
+    "slide": "1.1.6",
+    "tail-stream": "0.2.1"
   },
   "devDependencies": {
     "codecov.io": "0.0.8",
