--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "rewire": "2.1.3",
     "sinon": "1.12.1",
     "slide": "1.1.6",
-    "tail-stream": "0.2.1"
+    "fs-tail": "0.0.0"
   },
   "devDependencies": {
     "codecov.io": "0.0.8",
