--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "make test-codecov.io"
   },
   "author": "Christopher Olivares <chris@classdojo.com>",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "JSONStream": "0.9.0",
     "async": "0.9.0",
