--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aws-sdk": "2.0.25",
     "debug": "2.1.0",
     "expect.js": "0.3.1",
+    "fs-tail": "0.0.3",
     "highland": "2.0.0",
     "jshint": "2.5.10",
     "lodash": "2.4.1",
@@ -21,9 +22,9 @@
     "node-uuid": "1.4.1",
     "once": "1.3.1",
     "rewire": "2.1.3",
+    "s3-multipart-stream": "0.0.1",
     "sinon": "1.12.1",
-    "slide": "1.1.6",
-    "fs-tail": "0.0.3"
+    "slide": "1.1.6"
   },
   "devDependencies": {
     "codecov.io": "0.0.8",
